Comenzamos a crear los comentarios
le dimos una pequeña manita a acomodar las actividades.

--- a/static/templates/home/activityTemplate.html
+++ b/static/templates/home/activityTemplate.html
@@ -1,7 +1,14 @@
 
 
+<ul>
 
-{{title}} 
+<li>plusoners: {{object.plusoners.totalItems}}</li>
+<li>replies: {{object.replies.totalItems}}  </li>
+<li>resharers: {{object.resharers.totalItems}}  </li>
+
+
+</ul>
+<h2> <a href="{{object.url}}" target="_blank" > {{title}} </a> </h2>
 
 <br>
 
