--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,18 @@
 
   <script data-main="{{url_for('static', filename='js/main')}}" src="{{url_for('static', filename='js/libs/require/require.js') }}"></script>
   <style type="text/css">
+
+  #activity{
+ border:1px solid ;
+ margin-left:210px;
+ width:300px;
+
+}
+
+
   #personas{
  border:1px solid red;
+ float:left;
  font-size:.6em;
  width:200px;
 
@@ -21,6 +31,13 @@
 #personas img{
  
   width:40px;
+}
+.activityRow{
+  
+ border:1px solid green;
+ margin:10px;
+ padding:5px;
+ 
 }
 
 
