Funciona ahora si api Issue

--- a/pyPlus/frontend/static/templates/admin/homeTemplate.html
+++ b/pyPlus/frontend/static/templates/admin/homeTemplate.html
@@ -1,10 +1,22 @@
-<div id="divbuscar">
 
-		<input type="text" placeholder="Buscar...." />  <button>  Buscar </button>
+
+
+
+<fieldset>
+<legend>Issues</legend>
+<ul id="Issues">
+
+
+</ul>
+<input type="text" name="name" id="Iname" placeholder="Issue">
+<input type="text" name="description" id="Idescription" placeholder="Description">
+<button id="addIssue">Agregar</button>
+
+</fieldset>
+<div id="categories">
+
+
 </div>
-
-
-
 
 <ul>
 	<li> Issues </li>
