--- a/pyPlus/frontend/static/templates/admin/homeTemplate.html
+++ b/pyPlus/frontend/static/templates/admin/homeTemplate.html
@@ -13,10 +13,21 @@
 <button id="addIssue">Agregar</button>
 
 </fieldset>
-<div id="categories">
 
 
-</div>
+
+<fieldset>
+<legend>Categories</legend>
+	<ul id="categories">
+
+
+	</ul>
+	<input type="text" name="name" id="Cname" placeholder="Category">
+<input type="text" name="description" id="Cdescription" placeholder="Description">
+<button id="addCategory">Agregar</button>
+
+</fieldset>
+
 
 <ul>
 	<li> Issues </li>
