--- a/pyPlus/frontend/static/css/estilos.css
+++ b/pyPlus/frontend/static/css/estilos.css
@@ -1,1 +1,1 @@
-#activity{border:1px solid;margin-left:210px;width:600px}#personas{border:1px solid #f00;float:left;font-size:.6em;width:200px}#personas div{margin:5px}#personas img{width:40px}.activityRow{border:1px solid #008000;margin:10px;padding:5px}
+.tabs-content.vertical{width:100%}.tabs.vertical{width:100%}
