--- a/pyPlus/frontend/static/templates/home/homeTemplate.html
+++ b/pyPlus/frontend/static/templates/home/homeTemplate.html
@@ -1,22 +1,133 @@
  
 
 
-<div id="divbuscar">
 
-		<input id="buscar" type="text" placeholder="Buscar...." />  <button>  Buscar </button>
+<div class="row">
+
+			 <div class="large-9 columns">
+  					
+  					
+  					
+  					
+  			</div>
+
+</div>
+
+<section class="row">
+  
+  
+  <div class="large-9 columns">
+  
+ 
+ 	<div style="display:none"> 
+ <dl class="sub-nav">
+  <dt>Filter:</dt>
+  <dd class="active"><a href="#">All</a></dd>
+  <dd><a href="#"> Moda </a></dd>
+  <dd><a href="#"> Tecnologia</a></dd>
+  <dd><a href="#"> Deportes</a></dd>
+</dl>
+ <dl class="sub-nav">
+  <dt>Filter:</dt>
+  <dd class="active"><a href="#">All</a></dd>
+  <dd><a href="#"> Imagenes </a></dd>
+  <dd><a href="#"> Articulos</a></dd>
+  <dd><a href="#"> Carpetas</a></dd>
+   <dd><a href="#"> Videos</a></dd>
+</dl>
+  
+  </div>
+  <table>
+  <thead>
+    <tr>
+      <th> Title</th>
+      <th> type </th>
+      <th> abstract</th>
+      <th >prevista</th>
+     
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Content Goes Here</td>
+      <th><img src="http://placehold.it/10x10" /> </th>
+      <td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
+      <td><img src="http://placehold.it/100x100" /></td>
+      
+    </tr>
+    <tr>
+      <td>Content Goes Here</td>
+      <th><img src="http://placehold.it/10x10" /> </th>
+      <td>This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
+      <td><img src="http://placehold.it/100x100" /></td>
+      
+    </tr>
+    <tr>
+      <td>Content Goes Here</td>
+      <th><img src="http://placehold.it/10x10" /> </th>
+      <td>This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
+      <td><img src="http://placehold.it/100x100" /></td>
+     
+    </tr>
+      <tr>
+      <td>Content Goes Here</td>
+      <th><img src="http://placehold.it/10x10" /> </th>
+      <td>This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
+      <td><img src="http://placehold.it/100x100" /></td>
+     
+    </tr>
+      <tr>
+      <td>Content Goes Here</td>
+      <th><img src="http://placehold.it/10x10" /> </th>
+      <td>This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
+      <td><img src="http://placehold.it/100x100" /></td>
+     
+    </tr>
+      <tr>
+      <td>Content Goes Here</td>
+      <th><img src="http://placehold.it/10x10" /> </th>
+      <td>This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
+      <td><img src="http://placehold.it/100x100" /></td>
+     
+    </tr>
+  </tbody>
+</table>
+<center>
+<ul class="pagination">
+  <li class="arrow unavailable"><a href="">&laquo;</a></li>
+  <li class="current"><a href="">1</a></li>
+  <li><a href="">2</a></li>
+  <li><a href="">3</a></li>
+  <li><a href="">4</a></li>
+  <li class="unavailable"><a href="">&hellip;</a></li>
+  <li><a href="">12</a></li>
+  <li><a href="">13</a></li>
+  <li class="arrow"><a href="">&raquo;</a></li>
+</ul>
+
+</center>
+
+
+	
+
+</div>
  
  
-</div>
+ 
+ 
+  <div class="large-3 columns">
+  	<ul class="pricing-table">
+  <li class="title">Info</li>
+  <li class="price">$99.99</li>
+  <li class="description">An awesome description</li>
+  <li class="bullet-item">1 Database</li>
+  <li class="bullet-item">5GB Storage</li>
+  <li class="bullet-item">20 Users</li>
+  <li class="cta-button"><a class="button" href="#">Buy Now</a></li>
+</ul>
+  
+  
+  </div>
 
 
-
-<div id="personas">
-
-
-</div>
-
-
-<div id="activity">
-
-
-</div>
+</section>
