--- a/pyPlus/frontend/templates/index.html
+++ b/pyPlus/frontend/templates/index.html
@@ -1,36 +1,38 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="no-js" lang="es">
 <head>
   <title>Pruebas Con BackBone</title>
+  	<meta charset="utf-8" />
 	<meta name="description" content="">
   	<meta name="author" content="fcarrizalest">
 	{% assets "css_all" %}
       <link rel="stylesheet" href="{{ ASSET_URL }}"/>
     {% endassets %}
-
-  	<meta name="viewport" content="width=device-width,initial-scale=1">
+{% assets "js_header" -%}
+      <script   src="{{ ASSET_URL }}"></script>
+    {% endassets %}
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="csrf_token" content="{{ csrf_token() }}" />
 </head>
-<body>
+<body >
 
-
-<h1>TEST</h1>
-
-<a href="#"> Home </a><br><br>
-<a href="#admin"> Administracion </a><br><br>
-
-
-
-
+<nav id="menu" class="top-bar" data-topbar>
+  
+</nav>
 
 
 <div id="page">
-Loading...
+
 
 </div>
+
+
+
 {% assets "js_main" -%}
       <script data-main="{{url_for('static', filename='js/main')}}"  src="{{ ASSET_URL }}"></script>
     {% endassets %}
-
+<script>
+     
+</script>
 </body>
 </html>
