--- a/static/templates/home/activityTemplate.html
+++ b/static/templates/home/activityTemplate.html
@@ -1,6 +1,6 @@
 
 
-<ul>
+<ul class="inline-list">
 
 <li>plusoners: {{object.plusoners.totalItems}}</li>
 <li>replies: {{object.replies.totalItems}}  </li>
@@ -8,6 +8,6 @@
 
 
 </ul>
-<h2> <a href="{{object.url}}" target="_blank" > {{title}} </a> </h2>
+<h5> <a href="{{object.url}}" target="_blank" > {{title}} </a> </h5>
 
 <br>
