--- a/static/templates/home/homeTemplate.html
+++ b/static/templates/home/homeTemplate.html
@@ -1,22 +1,23 @@
  
 
+<div class="small-3 columns">
+<div  id="divbuscar">
 
-<div id="divbuscar">
+		<input id="buscar" type="text" value="Enigma Hernandez" placeholder="Buscar...." />  <button>  Buscar </button>
 
-		<input id="buscar" type="text" placeholder="Buscar...." />  <button>  Buscar </button>
+ 	<ul  class="small-block-grid-1"  id="personas">
 
- 
+
+		</ul>
+	</div>
 </div>
 
 
 
-<div id="personas">
 
 
-</div>
 
-
-<div id="activity">
+<div class="small-9 columns" id="activity">
 
 
 </div>
