--- a/static/templates/home/pTemplate.html
+++ b/static/templates/home/pTemplate.html
@@ -1,4 +1,8 @@
 
-
-  <img  src="{{image.url}}" /> {{displayName}}  
-
+	
+		<a class="th [radius]">
+  			<img  src="{{image.url}}" />
+  			{{displayName}} 
+		</a>
+		  
+	
